<resources>
    <string name="app_name">够不购</string>
    <string name="home">首页</string>
    <string name="together">一起买</string>
    <string name="grab">九点抢</string>
    <string name="self">我的</string>
    <string name="loading">加载中&#8230;</string>
    <string name="friends">好友</string>
    <string name="ranking">排名</string>
    <string name="qr_code">扫一扫</string>
    <string name="shopping_cart">购物车</string>
    <string name="news">消息</string>
    <string name="I_started_to_buy_together">我发起的一起买</string>
    <string name="current_assets">当前资产</string>
    <string name="today">今日</string>
    <string name="current">当前</string>
    <string name="join">加入</string>
    <string name="obtain">获得</string>
    <string name="participate">参与</string>


    <!--字体图标-->
    <string name="icons_price_reduction">&#xe6ae;</string>
    <string name="icons_good_friends">&#xe699;</string>
    <string name="product_collection">商品收藏</string>
    <string name="shop_favorites">店铺收藏</string>
    <string name="history">浏览记录</string>
    <string name="my_order">我的订单</string>
    <string name="view_all">查看全部</string>
    <string name="pending_payment">待付款</string>
    <string name="to_be_used">待使用</string>
    <string name="to_be_evaluated">待评价</string>
    <string name="return_of_goods">退货</string>
    <string name="my_bean_coins">我的豆币</string>
    <string name="my_ticket">我的票券</string>
    <string name="my_goog_friend">我的好友</string>
    <string name="recommend_feedback">意见反馈</string>
    <string name="setting">设置</string>
    <string name="business_background">商家后台</string>
    <string name="login_or_register">登陆/注册</string>

</resources>
