<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@mipmap/together_header_bg"
              android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/together_info"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0">

        <com.jumeng.shop.view.CircleImageView
            android:id="@+id/together_avatar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:src="@mipmap/ic_launcher"
            app:civ_border_color="#36b3f0"
            app:civ_border_width="2dp"/>

        <TextView
            android:id="@+id/together_username"
            style="@style/TextView"
            android:layout_alignTop="@+id/together_avatar"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/together_avatar"
            android:layout_toRightOf="@id/together_avatar"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/text_14sp"/>

        <TextView
            style="@style/TextView"
            android:layout_alignBottom="@+id/together_avatar"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/together_avatar"
            android:layout_toRightOf="@id/together_avatar"
            android:text="@string/current_assets"
            android:textColor="@color/white"
            android:textSize="@dimen/text_12sp"/>

        <TextView
            android:id="@+id/together_assets"
            style="@style/TextView"
            android:layout_alignBottom="@+id/together_avatar"
            android:layout_marginLeft="80dp"
            android:layout_marginStart="80dp"
            android:layout_toEndOf="@+id/together_avatar"
            android:layout_toRightOf="@id/together_avatar"
            android:text="@string/current_assets"
            android:textColor="@color/white"
            android:textSize="@dimen/text_16sp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:scaleType="centerInside"
            android:src="@mipmap/arrow_right_white"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/transparent_black">

        <TextView
            android:id="@+id/together_today"
            style="@style/TextView"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:text="@string/today"
            android:textColor="@color/white"
            android:textSize="@dimen/text_16sp"/>

        <TextView
            android:id="@+id/together_join"
            style="@style/TextView"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:layout_toEndOf="@+id/together_today"
            android:layout_toRightOf="@+id/together_today"
            android:text="@string/join"
            android:textColor="@color/white"
            android:textSize="@dimen/text_10sp"/>

        <TextView
            android:id="@+id/together_times"
            style="@style/TextView"
            android:layout_alignBottom="@+id/together_join"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/together_join"
            android:layout_toRightOf="@+id/together_join"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/text_14sp"/>

        <TextView
            android:id="@+id/together_obtain"
            style="@style/TextView"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/together_today"
            android:layout_toRightOf="@+id/together_today"
            android:text="@string/obtain"
            android:textColor="@color/white"
            android:textSize="@dimen/text_10sp"/>

        <TextView
            android:id="@+id/together_money"
            style="@style/TextView"
            android:layout_alignTop="@+id/together_obtain"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/together_obtain"
            android:layout_toRightOf="@+id/together_obtain"
            android:drawableEnd="@mipmap/beans_white"
            android:drawablePadding="5dp"
            android:drawableRight="@mipmap/beans_white"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/text_14sp"/>


        <ImageView
            android:id="@+id/together_divider"
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:src="@color/white"/>

        <TextView
            android:id="@+id/together_current"
            style="@style/TextView"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_toEndOf="@+id/together_divider"
            android:layout_toRightOf="@+id/together_divider"
            android:text="@string/current"

            android:textColor="@color/white"
            android:textSize="@dimen/text_16sp"/>

        <TextView
            style="@style/TextView"
            android:layout_alignBottom="@+id/together_current"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/together_current"
            android:layout_toRightOf="@+id/together_current"
            android:text="@string/participate"
            android:textColor="@color/white"
            android:textSize="@dimen/text_10sp"/>

        <TextView
            android:id="@+id/together_number"
            style="@style/TextView"
            android:layout_alignBottom="@+id/together_current"
            android:layout_centerVertical="true"
            android:layout_marginLeft="35dp"
            android:layout_marginStart="35dp"
            android:layout_toEndOf="@+id/together_current"
            android:layout_toRightOf="@+id/together_current"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/text_16sp"/>
    </RelativeLayout>
</LinearLayout>